2/17/2021 BN fixed saving and loading the arrays, and fixed loading rooms from a file
2/17/2021 DH/BN/CB: Worked on correcting load_dungeon and adding endianess
2/16/2021 DH: Completed save dungeon, working on tracing segfaults in read dungeon
2/15/2021 DH/BN/CB: Worked on getting save dungeon complete, still need to trace some seg faults
2/15/2021 DH: Added PC struct and fixed some bugs with save_dungeon, added up to num_rooms in load_dungeon
2/14/2021 DH: Restructured room code in favor of using a struct and added dungeon_hardness and num_rooms writes in save_dungeon
2/13/2021 DH: Added parallel 2d array for storing hardness factor
2/12/2021 BN: Added create_player and cleaned up save and load tag setting
2/11/2021 DH: Added save / load tag checks and set up save_dungeon and load_dungeon skeletons
2/8/2021 BN/DH: Added simple path generation
2/5/2021 BN: Added stair generation and fixed some bugs
2/5/2021 DH: Added a check to avoid two rooms touching
2/4/2021 DH: Created Makefile and changed formatting.
2/4/2021 CB: Set up code, made create_rooms method, set_dungeon method, and
print_dungeon method.